--- a/style.css
+++ b/style.css
@@ -14,3 +14,37 @@
 .container{
     margin-bottom: 40px;
 }
+.cat1{
+    background-color: orange;
+    
+}
+.cat2{
+    background-color: rgb(43, 255, 0);
+}
+.cat3{
+    background-color: rgb(162, 0, 255);
+}
+.cat1,.cat2,.cat3{
+    padding: 10px 30px;
+    border-radius:10px ;
+}
+.catagory h1{
+    color: white;
+}
+.catagory img{
+    width: 100px;
+    height: 100px;
+}
+.card{
+    border: none!important;
+    box-shadow: 3px 3px 10px;
+}
+.card-footer{
+    background-color: white!important;
+}
+.contact {
+    height: 200px;
+}
+.footer{
+    text-align: center;
+}
